// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDispatch dispatch works 1`] = `
Object {
  "payload": undefined,
  "scope": "",
}
`;

exports[`createDispatch dispatch works 2`] = `
Object {
  "payload": undefined,
  "scope": "sideMenu",
}
`;

exports[`createDispatch dispatch works 3`] = `
Object {
  "payload": undefined,
  "scope": "sideMenu",
}
`;

exports[`createDispatch dispatch works 4`] = `
Object {
  "payload": undefined,
  "scope": "sideMenu.child",
}
`;
